--- a/index.html
+++ b/index.html
@@ -507,7 +507,8 @@
 					nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
 
 			</div>
-		</div> <!-- /section-intro-->
+		</div> 
+		<!-- /section-intro-->
 
 		<div class="row portfolio-content">
 
@@ -530,7 +531,9 @@
 								</div>
 							</a>
 						</div>
-					</div> <!-- /folio-item -->
+					</div>
+					
+					<!-- /folio-item -->
 
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
@@ -744,18 +747,19 @@
 					<!-- modal popups - end
 	            ============================================================= -->
 
-				</div> <!-- /portfolio-wrapper -->
+				</div> /portfolio-wrapper
 
 			</div> <!-- /twelve -->
 
 		</div> <!-- /portfolio-content -->
 
-	</section> <!-- /portfolio -->
+	</section> 
+	<!-- /portfolio -->
 
 
 	<!-- CTA Section
    ================================================== -->
-	<section id="cta" class="grey-section">
+	<!-- <section id="cta" class="grey-section">
 
 		<div class="row cta-content">
 
@@ -769,7 +773,7 @@
 						href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT"><span>DreamHost</span></a>.
 					Get <span>$50 off</span> when you sign up with the promocode <span>styleshout</span>.
 					<!-- Simply type	the promocode in the box labeled “Promo Code” when placing your order. -->
-				</p>
+				<!-- </p>
 
 				<div class="action">
 					<a class="button button-primary large" href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT">Sign
@@ -778,9 +782,10 @@
 
 			</div>
 
-		</div> <!-- /cta-content -->
+		</div>  -->
+		<!-- /cta-content -->
 
-	</section> <!-- /cta -->
+	<!-- </section>  --> -->
 
 
 	<!-- services Section
