--- a/index.html
+++ b/index.html
@@ -93,11 +93,12 @@
 		</div> <!-- /intro-content -->
 
 		<ul class="intro-social">
-			<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-			<li><a href="#"><i class="fa fa-behance"></i></a></li>
-			<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-			<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-			<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+			<li><a target="_blank" href="https://github.com/hamrouni-wajdi"><i class="fa fa-github"></i></a></li>
+					<li><a  target="_blank" href="https://stackoverflow.com/users/10188072/wajdi101"><i class="fa fa-stack-overflow"></i></a></li>
+					<li><a target="_blank" href="https://twitter.com/hamrouni7_wajdi"><i class="fa fa-twitter"></i></a></li>
+					<li><a target="_blank" href="https://dribbble.com/wajdi-hamrouni"><i class="fa fa-dribbble"></i></a></li>
+					<li><a  target="_blank" href="https://www.linkedin.com/in/wajdi-hamrouni-9b1854104/"><i class="fa fa-linkedin"></i></a></li>
+	
 		</ul> <!-- /intro-social -->
 
 	</section> <!-- /intro -->
@@ -250,8 +251,7 @@
 				<h5>Resume</h5>
 				<h1>More of my credentials.</h1>
 
-				<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia
-					nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
+				<p class="lead">I learned from every position, a lot of valuable lessons that made me what I'am today.</p>
 
 			</div>
 		</div> <!-- /section-intro-->
@@ -343,10 +343,12 @@
 								</li>
 								<li> Make data driven decisions, for internal recruitment and
 									assess students readiness for the industry</li>
+									
 								<li>
 									Coach and support team to accomplish their missions and move forward in their
 									careers
 								</li>
+								<li>Using a range of teaching materials and methods to deliver content.</li>
 							</ul>
 						</div>
 
@@ -358,24 +360,22 @@
 						</div>
 
 						<div class="timeline-header">
-							<h3>Lead Instructor</h3>
-							<p>April 2020 - June 2014</p>
+							<h3>Cheif of Electoral Center</h3>
+							<p>April 2019 - December 2019</p>
 						</div>
 
 						<div class="timeline-content">
-							<h4>RBK Tunisia</h4>
+							<h4>ISIE Tunisia</h4>
 							<ul>
-								<li> Led a team of 7 instructors, to assure the most viable
-									learning encounter and design up to date material.</li>
-								<li> Delivered lectures and live coding sessions to assist students
-									in reaching the market's technical level
+								<li>Managed a team of agents in charge of planning the election
+									and overseeing the processes and adherence to the
+									organization's ideals</li>
+								<li> Collaborated with the military and police to ensure the
+									safety of voters and electoral tools, as well as maintain order
+									and discipline in the center
 								</li>
-								<li> Make data driven decisions, for internal recruitment and
-									assess students readiness for the industry</li>
-								<li>
-									Coach and support team to accomplish their missions and move forward in their
-									careers
-								</li>
+								<li>Provide detailed reports on the election's progress and
+									results</li>
 							</ul>
 						</div>
 
@@ -387,23 +387,20 @@
 						</div>
 
 						<div class="timeline-header">
-							<h3>Lead Instructor</h3>
-							<p>April 2020 - June 2014</p>
+							<h3>High School Technology teacher</h3>
+							<p>September 2017 - June 2019</p>
 						</div>
 
 						<div class="timeline-content">
-							<h4>RBK Tunisia</h4>
+							<h4>Ibn Kholdoun High School Soliman</h4>
 							<ul>
-								<li> Led a team of 7 instructors, to assure the most viable
-									learning encounter and design up to date material.</li>
-								<li> Delivered lectures and live coding sessions to assist students
-									in reaching the market's technical level
+							<li>Monitoring students’ overall wellbeing and liaising with school counselors and other staff members when there are concerns or issues.</li>
+								<li> Developing lesson plans in the relevant subject area and grade, and ensuring all lessons align with curriculum objectives.</li>
+								<li> Drawing up classroom rules and safety regulations and ensuring all students understand them.
 								</li>
-								<li> Make data driven decisions, for internal recruitment and
-									assess students readiness for the industry</li>
+								<li> Preparing students for tests, exams, presentations, experiments, and other assessments.</li>
 								<li>
-									Coach and support team to accomplish their missions and move forward in their
-									careers
+									Grading assessments and providing feedback and reports to students and parents.
 								</li>
 							</ul>
 						</div>
@@ -785,7 +782,7 @@
 		</div>  -->
 		<!-- /cta-content -->
 
-	<!-- </section>  --> -->
+	<!-- </section>  --> 
 
 
 	<!-- services Section
@@ -888,7 +885,8 @@
 
 					</div>
 
-				</div> /service --> -->
+				</div> /service --> 
+				
 <!-- 
 				<div class="service">
 
@@ -906,11 +904,11 @@
 
 					</div>
 
-				</div> <!-- /service -->
+				</div> </service -->
 
 			</div> <!-- /services-list -->
 
-		</div> /services-content -->
+		</div> 
 
 	</section> <!-- /services -->
 
@@ -931,7 +929,7 @@
 						</div>
 
 						<h3 class="stat-count">
-							1500
+							15
 						</h3>
 
 						<h5 class="stat-title">
@@ -947,11 +945,11 @@
 						</div>
 
 						<h3 class="stat-count">
-							900
+							340
 						</h3>
 
 						<h5 class="stat-title">
-							Happy Clients
+							Succesful Students
 						</h5>
 
 					</div> <!-- /stat -->
@@ -963,14 +961,15 @@
 						</div>
 
 						<h3 class="stat-count">
-							200
+							11
 						</h3>
 
 						<h5 class="stat-title">
-							Awards Received
+							Succeful cohorts
 						</h5>
 
-					</div> <!-- /stat -->
+					</div>
+					<!-- /stat -->
 
 					<div class="bgrid stat">
 
@@ -979,7 +978,7 @@
 						</div>
 
 						<h3 class="stat-count">
-							120
+							999
 						</h3>
 
 						<h5 class="stat-title">
@@ -1038,8 +1037,7 @@
 				<h5>Contact</h5>
 				<h1>I'd Love To Hear From You.</h1>
 
-				<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia
-					nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
+				<p class="lead">You're welcome to contact me by filling this form</p>
 
 			</div>
 		</div> <!-- /section-intro -->
@@ -1105,9 +1103,9 @@
 				<h5>Where to find me</h5>
 
 				<p>
-					1600 Amphitheatre Parkway<br>
-					Mountain View, CA<br>
-					94043 US
+					Ariana Soghra<br>
+					Ariana, Tunisia<br>
+					2088 Tn
 				</p>
 
 			</div>
@@ -1120,8 +1118,8 @@
 
 				<h5>Email Me At</h5>
 
-				<p>someone@kardswebsite.com<br>
-					info@kardswebsite.com
+				<p>Wajdihamrouni501.com<br>
+					hamrouniwajdi14@gmail.com
 				</p>
 
 			</div>
@@ -1134,9 +1132,8 @@
 
 				<h5>Call Me At</h5>
 
-				<p>Phone: (+63) 555 1212<br>
-					Mobile: (+63) 555 0100<br>
-					Fax: (+63) 555 0101
+				<p>Phone: (+216) 27 427 431<br>
+
 				</p>
 
 			</div>
@@ -1156,10 +1153,10 @@
 
 				<ul class="footer-social">
 					<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-					<li><a href="#"><i class="fa fa-behance"></i></a></li>
-					<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-					<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-					<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+			<li><a href="#"><i class="fa fa-behance"></i></a></li>
+			<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+			<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+			<li><a href="#"><i class="fa fa-instagram"></i></a></li>
 				</ul>
 
 			</div>
