--- a/index.html
+++ b/index.html
@@ -1163,8 +1163,8 @@
 
 			<div class="col-six tab-full">
 				<div class="copyright">
-					<span>© Copyright Kards 2016.</span>
-					<span>Design by <a href="http://www.styleshout.com/">styleshout</a></span>
+					
+					<span>Inspired by <a href="http://www.styleshout.com/">styleshout</a></span>
 				</div>
 			</div>
 
