--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
    ================================================== -->
 	<meta charset="utf-8">
 	<title>Wajdi Hamrouni</title>
-	<meta name="description" content="">
-	<meta name="author" content="">
+	<meta name="description" content="Wajdi hamrouni portfolio website, Web developer, coding instructor, project manager">
+	<meta name="author" content="Wajdi Hamrouni">
 
 	<!-- mobile specific metas
    ================================================== -->
@@ -54,7 +54,7 @@
 						<li class="current"><a class="smoothscroll" href="#intro" title="">Home</a></li>
 						<li><a class="smoothscroll" href="#about" title="">About</a></li>
 						<li><a class="smoothscroll" href="#resume" title="">Resume</a></li>
-						<li><a class="smoothscroll" href="#portfolio" title="">Portfolio</a></li>
+						<!-- <li><a class="smoothscroll" href="#portfolio" title="">Portfolio</a></li> -->
 						<li><a class="smoothscroll" href="#services" title="">Services</a></li>
 						<li><a class="smoothscroll" href="#contact" title="">Contact</a></li>
 						<!-- <li><a href="styles.html" title="">Style Demo</a></li> -->
@@ -437,7 +437,7 @@
 
 						<div class="timeline-content">
 							<h4>University of Monastir</h4>
-							<p>Obtained Bachelor diploma in Electronics and automation in 2016</p>
+							<p>Bachelor Degree in Electronics and automatics in 2016</p>
 						</div>
 
 					</div> <!-- /timeline-block -->
@@ -450,7 +450,7 @@
 
 						<div class="timeline-header">
 							<h3>Full Stack Js Certification</h3>
-							<p>September 2019 - January 2020</p>
+							<p>2019 - 2020</p>
 						</div>
 
 						<div class="timeline-content">
@@ -1118,7 +1118,7 @@
 
 				<h5>Email Me At</h5>
 
-				<p>Wajdihamrouni501.com<br>
+				<p>Wajdihamrouni501@gmail.com<br>
 					hamrouniwajdi14@gmail.com
 				</p>
 
