--- a/index.html
+++ b/index.html
@@ -1047,7 +1047,7 @@
 			<div class="col-twelve">
 
 				<!-- form -->
-				<form name="contactForm" id="contactForm" method="post" action="">
+				<form name="contactForm" id="contactForm" method="post" action="#">
 					<fieldset>
 
 						<div class="form-field">
