--- a/index.html
+++ b/index.html
@@ -188,6 +188,10 @@
 						<strong>React JS</strong>
 					</li>
 					<li>
+						<div class="progress percent90"><span>90%</span></div>
+						<strong>Redux </strong>
+					</li>
+					<li>
 						<div class="progress percent70"><span>70%</span></div>
 						<strong>MongoDB</strong>
 					</li>
@@ -1145,7 +1149,7 @@
 
 	<!-- footer
    ================================================== -->
-
+   <a href="mailto:wajdihamrouni501@gmail.com">Send email</a>
 	<footer>
 		<div class="row">
 
