--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    ================================================== -->
 	<meta charset="utf-8">
 	<title>Wajdi Hamrouni</title>
-	<meta name="description" content="Wajdi hamrouni portfolio website, Web developer, coding instructor, project manager">
+	<meta name="description" content="Wajdi hamrouni portfolio website, Web developer, coding instructor, project manager and freelancer">
 	<meta name="author" content="Wajdi Hamrouni">
 
 	<!-- mobile specific metas
@@ -1055,18 +1055,18 @@
 					<fieldset>
 
 						<div class="form-field">
-							<input name="contactName" type="text" id="contactName" placeholder="Name" value=""
+							<input autocomplete="off" name="contactName" type="text" id="contactName" placeholder="Name" value=""
 								minlength="2" required="">
 						</div>
 						<div class="form-field">
-							<input name="contactEmail" type="email" id="contactEmail" placeholder="Email" value=""
+							<input autocomplete="off" name="contactEmail" type="email" id="contactEmail" placeholder="Email" value=""
 								required="">
 						</div>
 						<div class="form-field">
-							<input name="contactSubject" type="text" id="contactSubject" placeholder="Subject" value="">
+							<input autocomplete="off" name="contactSubject" type="text" id="contactSubject" placeholder="Subject" value="">
 						</div>
 						<div class="form-field">
-							<textarea name="contactMessage" id="contactMessage" placeholder="message" rows="10"
+							<textarea autocomplete="off" name="contactMessage" id="contactMessage" placeholder="message" rows="10"
 								cols="50" required=""></textarea>
 						</div>
 						<div class="form-field">
@@ -1149,7 +1149,6 @@
 
 	<!-- footer
    ================================================== -->
-   <a href="mailto:wajdihamrouni501@gmail.com">Send email</a>
 	<footer>
 		<div class="row">
 
