--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 					</li>
 					<li>
 						<strong>Website:</strong>
-						<span>www.kardswebsite.com</span>
+						<span>www.wajdi-hamrouni.netlify.app</span>
 					</li>
 					<li>
 						<strong>Email:</strong>
