--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						<li class="current"><a class="smoothscroll" href="#intro" title="">Home</a></li>
 						<li><a class="smoothscroll" href="#about" title="">About</a></li>
 						<li><a class="smoothscroll" href="#resume" title="">Resume</a></li>
-						<li><a class="smoothscroll" href="#portfolio" title="">Portfolio</a></li>
+						<li><a class="smoothscroll" href="#skills" title="">Portfolio</a></li>
 						<li><a class="smoothscroll" href="#services" title="">Services</a></li>
 						<li><a class="smoothscroll" href="#contact" title="">Contact</a></li>
 						<!-- <li><a href="styles.html" title="">Style Demo</a></li> -->
@@ -173,7 +173,7 @@
 
 			<div class="col-six tab-full">
 
-				<h3>Skills</h3>
+				<h3 id="skills">Skills</h3>
 				<p>I have a set of technical and non technical skills</p>
 
 				<ul class="skill-bars">
