--- a/index.html
+++ b/index.html
@@ -1152,7 +1152,7 @@
 	<footer>
 		<div class="row">
 
-			<div class="col-six tab-full pull-right social">
+			<!-- <div class="col-six tab-full pull-right social">
 
 				<ul class="footer-social">
 					<li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -1162,14 +1162,14 @@
 			<li><a href="#"><i class="fa fa-instagram"></i></a></li>
 				</ul>
 
-			</div>
+			</div> -->
 
-			<div class="col-six tab-full">
+			<!-- <div class="col-six tab-full">
 				<div class="copyright">
 					
 					<span>Inspired by <a href="http://www.styleshout.com/">styleshout</a></span>
 				</div>
-			</div>
+			</div> -->
 
 			<div id="go-top">
 				<a class="smoothscroll" title="Back to Top" href="#top"><i class="fa fa-long-arrow-up"></i></a>
