--- a/index.html
+++ b/index.html
@@ -1041,7 +1041,7 @@
 				<h5>Contact</h5>
 				<h1>I'd Love To Hear From You.</h1>
 
-				<p class="lead">You're welcome to contact me by filling this form</p>
+				<p class="lead">You're welcome to contact me in here</p>
 
 			</div>
 		</div> <!-- /section-intro -->
@@ -1049,40 +1049,9 @@
 		<div class="row contact-form">
 
 			<div class="col-twelve">
-
-				<!-- form -->
-				<form name="contactForm" id="contactForm" method="post" action="#">
-					<fieldset>
-
-						<div class="form-field">
-							<input autocomplete="off" name="contactName" type="text" id="contactName" placeholder="Name" value=""
-								minlength="2" required="">
-						</div>
-						<div class="form-field">
-							<input autocomplete="off" name="contactEmail" type="email" id="contactEmail" placeholder="Email" value=""
-								required="">
-						</div>
-						<div class="form-field">
-							<input autocomplete="off" name="contactSubject" type="text" id="contactSubject" placeholder="Subject" value="">
-						</div>
-						<div class="form-field">
-							<textarea autocomplete="off" name="contactMessage" id="contactMessage" placeholder="message" rows="10"
-								cols="50" required=""></textarea>
-						</div>
-						<div class="form-field">
-							<button class="submitform">Submit</button>
-							<div id="submit-loader">
-								<div class="text-loader">Sending...</div>
-								<div class="s-loader">
-									<div class="bounce1"></div>
-									<div class="bounce2"></div>
-									<div class="bounce3"></div>
-								</div>
-							</div>
-						</div>
-
-					</fieldset>
-				</form> <!-- Form End -->
+				<a target="_blank" href="mailto:wajdihamrouni501@gmail.com">
+					<button class="submitform">Contac me</button>
+				</a>
 
 				<!-- contact-warning -->
 				<div id="message-warning">
